src/codes/backend/Testes/resultados/log_2025-11-05_18-40-16.txt
FAIL Testes/isolamento.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation, specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    SyntaxError: F:\Programacao\GitHub\pbr-si-2025-2-p3-tiapn-t1-9147100-smart-gestao\src\codes\backend\Testes\isolamento.test.js: Missing semicolon. (15:12)

      13 | // --- Dados de Teste (Reutilizando de api.test.js) ---
      14 |     email: `empresaA_${Date.now()}@test.com`,
    > 15 |     password: 'password123',
         |             ^
      16 |     companyName: `Empresa A Teste ${Date.now()}`,
      17 |     cnpj: `${Date.now()}`.slice(0, 14).padStart(14, '0'),
      18 |     name: 'Usuário A'

      at constructor (node_modules/@babel/parser/src/parse-error.ts:95:45)
      at Parser.toParseError [as raise] (node_modules/@babel/parser/src/tokenizer/index.ts:1507:19)
      at Parser.raise [as semicolon] (node_modules/@babel/parser/src/parser/util.ts:149:10)
      at Parser.semicolon [as parseExpressionStatement] (node_modules/@babel/parser/src/parser/statement.ts:1363:10)
      at Parser.parseExpressionStatement [as parseStatementContent] (node_modules/@babel/parser/src/parser/statement.ts:702:19)
      at Parser.parseStatementContent [as parseStatementLike] (node_modules/@babel/parser/src/parser/statement.ts:482:17)
      at Parser.parseStatementLike [as parseStatementOrSloppyAnnexBFunctionDeclaration] (node_modules/@babel/parser/src/parser/statement.ts:451:17)
      at Parser.parseStatementOrSloppyAnnexBFunctionDeclaration [as parseLabeledStatement] (node_modules/@babel/parser/src/parser/statement.ts:1348:16)
      at Parser.parseLabeledStatement (node_modules/@babel/parser/src/parser/statement.ts:695:19)
      at Parser.parseStatementContent [as parseStatementLike] (node_modules/@babel/parser/src/parser/statement.ts:482:17)
      at Parser.parseStatementLike [as parseModuleItem] (node_modules/@babel/parser/src/parser/statement.ts:419:17)
      at Parser.parseModuleItem [as parseBlockOrModuleBlockBody] (node_modules/@babel/parser/src/parser/statement.ts:1443:16)
      at Parser.parseBlockOrModuleBlockBody [as parseBlockBody] (node_modules/@babel/parser/src/parser/statement.ts:1417:10)
      at Parser.parseBlockBody [as parseProgram] (node_modules/@babel/parser/src/parser/statement.ts:229:10)
      at Parser.parseProgram [as parseTopLevel] (node_modules/@babel/parser/src/parser/statement.ts:203:25)
      at Parser.parseTopLevel [as parse] (node_modules/@babel/parser/src/parser/index.ts:88:25)
      at parse (node_modules/@babel/parser/src/index.ts:86:38)
      at parser (node_modules/@babel/core/src/parser/index.ts:29:19)
          at parser.next (<anonymous>)
      at normalizeFile (node_modules/@babel/core/src/transformation/normalize-file.ts:50:24)
          at normalizeFile.next (<anonymous>)
      at run (node_modules/@babel/core/src/transformation/index.ts:41:36)
          at run.next (<anonymous>)
      at transform (node_modules/@babel/core/src/transform.ts:29:20)
          at transform.next (<anonymous>)
      at step (node_modules/gensync/index.js:261:32)
      at node_modules/gensync/index.js:273:13
      at async.call.result.err.err (node_modules/gensync/index.js:223:11)
      at node_modules/gensync/index.js:189:28
      at cb (node_modules/@babel/core/src/gensync-utils/async.ts:90:7)
      at node_modules/gensync/index.js:113:33
      at step (node_modules/gensync/index.js:287:14)
      at node_modules/gensync/index.js:273:13
      at async.call.result.err.err (node_modules/gensync/index.js:223:11)

  console.log
    
    --- Teste: Cadastrar novo usuário ---

      at Object.log (Testes/api.test.js:50:17)

  console.log
    Enviando: {
      "name": "Usuário A",
      "email": "empresaA_1762378818857@test.com",
      "password": "password123",
      "companyName": "Empresa A Teste 1762378818857",
      "cnpj": "01762378818857"
    }

      at Object.log (Testes/api.test.js:51:17)

(node:13380) ExperimentalWarning: VM Modules is an experimental feature and might change at any time
(Use `node --trace-warnings ...` to show where the warning was created)
  console.log
    Recebido (Status): 201

      at Object.log (Testes/api.test.js:56:21)

  console.log
    Recebido (Corpo): {
      "message": "Usuário cadastrado com sucesso!"
    }

      at Object.log (Testes/api.test.js:57:21)

  console.log
    
    --- Teste: Barrar e-mail duplicado ---

      at Object.log (Testes/api.test.js:79:17)

  console.log
    Enviando: {
      "name": "Usuário A",
      "email": "empresaA_1762378818857@test.com",
      "password": "password123",
      "companyName": "Nome Duplicado",
      "cnpj": "11223344556677"
    }

      at Object.log (Testes/api.test.js:80:17)

  console.log
    Recebido (Status): 409

      at Object.log (Testes/api.test.js:86:21)

  console.log
    Recebido (Corpo): {
      "message": "E-mail já cadastrado."
    }

      at Object.log (Testes/api.test.js:87:21)

  console.log
    
    --- Teste: Login com senha incorreta ---

      at Object.log (Testes/api.test.js:101:17)

  console.log
    Enviando: {
      "email": "empresaA_1762378818857@test.com",
      "password": "senha-errada"
    }

      at Object.log (Testes/api.test.js:102:17)

  console.log
    Recebido (Status): 401

      at Object.log (Testes/api.test.js:107:21)

  console.log
    Recebido (Corpo): {
      "message": "Credenciais inválidas."
    }

      at Object.log (Testes/api.test.js:108:21)

  console.log
    
    --- Teste: Login com sucesso ---

      at Object.log (Testes/api.test.js:122:17)

  console.log
    Enviando: {
      "email": "empresaA_1762378818857@test.com",
      "password": "password123"
    }

      at Object.log (Testes/api.test.js:123:17)

  console.log
    Recebido (Status): 200

      at Object.log (Testes/api.test.js:127:17)

  console.log
    Recebido (Corpo): {
      "user": {
        "name": "Usuário A",
        "email": "empresaa_1762378818857@test.com"
      },
      "message": "Tokens recebidos"
    }

      at Object.log (Testes/api.test.js:128:17)

  console.log
    
    --- Teste: Acesso a rota protegida sem token ---

      at Object.log (Testes/api.test.js:141:17)

  console.log
    Enviando: GET para http://localhost:5000/api/transactions

      at Object.log (Testes/api.test.js:142:17)

  console.log
    Recebido (Status): 401

      at Object.log (Testes/api.test.js:148:21)

  console.log
    Recebido (Corpo): {
      "message": "Token ausente ou formato inválido"
    }

      at Object.log (Testes/api.test.js:149:21)

PASS Testes/api.test.js
  1. Módulo de Autenticação
    √ RF-001: deve cadastrar um novo usuário e empresa (Empresa A) (444 ms)
    √ deve barrar o cadastro de um usuário com e-mail já existente (57 ms)
    √ deve falhar o login com senha incorreta (110 ms)
    √ deve realizar o login com sucesso para a Empresa A (271 ms)
    √ deve proteger rotas, barrando acesso sem token (33 ms)

----------|---------|----------|---------|---------|-------------------
File      | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------|---------|----------|---------|---------|-------------------
All files |       0 |        0 |       0 |       0 |                   
----------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 passed, 2 total
Tests:       5 passed, 5 total
Snapshots:   0 total
Time:        2.12 s
Ran all test suites.
